Bishop created